2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c (grub_cryptodisk_endecrypt): Rename
	argument from encrypt to do_encrypt to avoid shadowing.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot_elfxx.c (grub_multiboot_load_elf): Fix
	incorrect nesting of #if's.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsacpi.c (disp_acpi_xsdt_table): #if'-out the
	checks which are always false on some platforms.
	(grub_cmd_lsacpi): Likewise.
	* grub-core/kern/misc.c (grub_strtoul): Likewise.
	* grub-core/loader/multiboot.c (grub_multiboot_set_video_mode):
	Likewise.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (read_segment): Renome unreachable code.
	* grub-core/net/ip.c (grub_net_recv_ip4_packets): Likewise.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/regex.h (re_pattern_buffer): Declare buffer as
	re_dfa_t to avoid breaking alignment invariants.
	* grub-core/gnulib/regex_internal.h (re_dfa_t): Moved to ...
	* grub-core/gnulib/regex.h (re_dfa_t): ... here.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (grub_xnu_boot): Fix printf.
	* grub-core/loader/ia64/efi/linux.c (grub_cmd_fpswa): Likewise.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/qemu/mmap.c (grub_machine_mmap_init):
	Fix declaration.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/ehci.c (grub_ehci_ehcc_read32): Restructure to
	conserve alignment invariants.
	(grub_ehci_ehcc_read16): Likewise.
	(grub_ehci_oper_read32): Likewise.
	(grub_ehci_oper_write32): Likewise.
	(grub_ehci_pci_iter) [!GRUB_HAVE_UNALIGNED_ACCESS]: Check alignment.
	Conserve alignment invariants.

2012-02-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/full.c (grub_emu_post_init): Remove raid reinit.